@@ -1037,8 +1037,8 @@ public class Enhancer extends AbstractClassGenerator {
 				throw new IllegalArgumentException("Callback filter returned an index that is too large: " + index);
 			}
 			originalModifiers.put(method,
-					new Integer((actualMethod != null) ? actualMethod.getModifiers() : method.getModifiers()));
-			indexes.put(method, new Integer(index));
+					Integer.valueOf((actualMethod != null) ? actualMethod.getModifiers() : method.getModifiers()));
+			indexes.put(method, Integer.valueOf(index));
 			List group = (List) groups.get(generators[index]);
 			if (group == null) {
 				groups.put(generators[index], group = new ArrayList(methods.size()));
